# test_sdk-0.17.2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  andes.sh  test-andes.sh
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/crowdfunding-dcdt/: Cargo.toml
contracts/examples/crowdfunding-erc20/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/crypto-kitties/common/kitty/: Cargo.toml
contracts/examples/crypto-kitties/common/kitty/src/: color.rs  kitty_genes.rs  lib.rs
contracts/examples/dcdt-nft-marketplace/: Cargo.toml
contracts/examples/erc1155/: Cargo.toml
contracts/examples/erc1155-marketplace/: Cargo.toml
contracts/examples/erc1155-user-mock/: Cargo.toml
contracts/examples/erc20/: Cargo.toml
contracts/examples/erc721/: Cargo.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/lottery-dcdt/: Cargo.toml  documentation.md
contracts/examples/lottery-erc20/: Cargo.toml  documentation.md
contracts/examples/multisig/: Cargo.toml
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/ping-pong-rewa/: Cargo.toml
contracts/examples/ping-pong-rewa/abi/: Cargo.toml
contracts/examples/ping-pong-rewa/abi/src/: main.rs
contracts/examples/ping-pong-rewa/interaction/: snippets.sh
contracts/examples/ping-pong-rewa/src/: lib.rs  user_status.rs
contracts/examples/ping-pong-rewa/tests/: ping_pong_rewa_testdenali_go_test.rs  ping_pong_rewa_testdenali_rs_test.rs
contracts/examples/ping-pong-rewa/wasm/: Cargo.toml
contracts/examples/rewa-dcdt-swap/: Cargo.toml
contracts/examples/rewa-dcdt-swap/abi/: Cargo.toml
contracts/examples/rewa-dcdt-swap/abi/src/: main.rs
contracts/feature-tests/abi-tester/: Cargo.toml
contracts/feature-tests/async/: Cargo.toml
contracts/feature-tests/async/async-alice/wasm/: Cargo.toml
contracts/feature-tests/async/async-alice/wasm/src/: lib.rs
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/dcdt-contract-pair/: Cargo.toml
contracts/feature-tests/deploy-two-contracts/: Cargo.toml
contracts/feature-tests/execute-on-dest-dcdt-issue-callback/: Cargo.toml
contracts/feature-tests/local-dcdt-and-nft/: Cargo.toml
contracts/feature-tests/nft-receiver/: Cargo.toml
contracts/feature-tests/panic-message-features/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml
contracts/feature-tests/use-module/abi/: Cargo.toml
contracts/feature-tests/use-module/abi/src/: main.rs
contracts/feature-tests/use-module/src/: internal_mod_a.rs  internal_mod_b.rs  internal_mod_c.rs  lib.rs
contracts/feature-tests/use-module/testdenali/: use_module_dns_register.scen.json
contracts/feature-tests/use-module/tests/: use_module_abi_test.rs  use_module_test.rs  use_module_testdenali_go_test.rs  use_module_testdenali_rs_test.rs
contracts/feature-tests/use-module/wasm/: Cargo.toml
testdenali/: Cargo.toml
testdenali/tests/: interpreter_test.rs  serde_test.rs
testnumbat-codec/: Cargo.toml
testnumbat-codec-derive/: Cargo.toml
testnumbat-codec-derive/src/: nested_de_derive.rs  nested_en_derive.rs  top_de_derive.rs  top_en_derive.rs
testnumbat-codec/src/: lib.rs  nested_de.rs  top_de_input.rs  top_ser_output.rs
testnumbat-codec/tests/: empty_struct_derive_test.rs  enum_derive_test.rs  enum_or_default_derive_test.rs  enum_tricky_defaults_derive_fieldless_test.rs  enum_tricky_defaults_derive_test.rs  shadowing_test.rs  struct_derive_test.rs  struct_or_default_derive_test.rs  struct_or_default_generic_derive_test.rs  struct_with_generic_derive_test.rs  tuple_struct_derive_test.rs
testnumbat-wasm/: Cargo.toml
testnumbat-wasm-debug/: Cargo.toml
testnumbat-wasm-debug/src/: andes_testdenali_runner.rs  async_data.rs  blockchain_mock.rs  contract_map.rs  display_util.rs  execute_testdenali.rs  lib.rs  tx_context.rs
testnumbat-wasm-debug/src/abi_json/: contract_abi_json.rs  endpoint_abi_json.rs  mod.rs  type_abi_json.rs
testnumbat-wasm-debug/src/api/: big_int_api_mock.rs  big_uint_api_mock.rs  blockchain_api_mock.rs  call_value_api_mock.rs  contract_self_api_mock.rs  crypto_api_mock.rs  endpoint_arg_api_mock.rs  endpoint_finish_api_mock.rs  error_api_mock.rs  log_api_mock.rs  send_api_mock.rs  storage_api_mock.rs
testnumbat-wasm-debug/tests/: framework_testdenali_test.rs  sample_adder.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_linked_list_mapper.rs
testnumbat-wasm-debug/tests/testdenali/: validatorReward.scen.json
testnumbat-wasm-derive/: Cargo.toml
testnumbat-wasm-derive/src/: contract_impl.rs  type_abi_derive.rs
testnumbat-wasm-node/: Cargo.toml
testnumbat-wasm-output/: Cargo.toml
testnumbat-wasm-serde/: Cargo.toml
testnumbat-wasm/src/: lib.rs  log_util.rs  macros.rs
testnumbat-wasm/src/api/: big_int_api.rs  big_uint_api.rs  blockchain_api.rs  send_api.rs
testnumbat-wasm/src/api/uncallable/: big_int_api_uncallable.rs  big_uint_api_uncallable.rs
testnumbat-wasm/src/dcdt/: system_sc_proxy.rs
testnumbat-wasm/src/hex_call_data/: cd_de.rs  cd_ser.rs
testnumbat-wasm/src/io/: arg_de_input.rs  contract_call_arg.rs  dyn_arg.rs  dyn_arg_input.rs  finish.rs  macro_helpers.rs  signal_error.rs
testnumbat-wasm/src/storage/: storage_get.rs  storage_set.rs
testnumbat-wasm/src/storage/mappers/: linked_list_mapper.rs  map_mapper.rs  map_storage_mapper.rs  set_mapper.rs  single_value_mapper.rs  user_mapper.rs  vec_mapper.rs
testnumbat-wasm/src/types/general/: boxed_bytes.rs  code_metadata.rs  dcdt_local_role.rs  dcdt_token_data.rs  dcdt_token_type.rs  h256.rs  h256_address.rs  queue.rs  token_identifier.rs
testnumbat-wasm/src/types/interaction/: arg_buffer.rs  contract_call.rs
testnumbat-wasm/src/types/io/: async_call_result.rs  multi_args.rs  multi_args_vec.rs  optional_arg.rs  sc_error.rs
testnumbat-wasm/tests/: test_arg_load.rs
tools/test-gen/: Cargo.toml
tools/test-gen/src/: main.rs
(+254 files in other folders)
