[package]
name = "ping-pong-rewa"
version = "0.0.2"
authors = [ "Test Author",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["testnumbat-wasm-node"]

[dependencies.testnumbat-wasm]
version = "0.0.1"
path = "../../../testnumbat-wasm"

[dependencies.testnumbat-wasm-derive]
version = "0.0.1"
path = "../../../testnumbat-wasm-derive"

[dependencies.testnumbat-wasm-node]
version = "0.0.1"
path = "../../../testnumbat-wasm-node"
optional = true

[dev-dependencies.testnumbat-wasm-debug]
version = "0.0.1"
path = "../../../testnumbat-wasm-debug"
