[package]
name = "rewa-dcdt-swap-abi"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[dev-dependencies]

[dependencies.rewa-dcdt-swap]
path = ".."

[dependencies.testnumbat-wasm]
version = "0.0.1"
path = "../../../../testnumbat-wasm"

[dependencies.testnumbat-wasm-debug]
version = "0.0.1"
path = "../../../../testnumbat-wasm-debug"
